--- a/src/features/home/sections/FirstViewSection/components/ImageSlider/ImageSlider.module.scss
+++ b/src/features/home/sections/FirstViewSection/components/ImageSlider/ImageSlider.module.scss
@@ -5,7 +5,7 @@
   position: relative;
   width: 100%;
   // height: 780px;
-  height: auto;
+  // height: auto;
   overflow: hidden;
 
   img {
